--- a/src/ListenTogether.Pages/Components/Player/PhonePlayingView.razor.css
+++ b/src/ListenTogether.Pages/Components/Player/PhonePlayingView.razor.css
@@ -2,3 +2,12 @@
     margin: 10px;
     height: 125px;
 }
+
+.text-white {
+    color: var(--mud-palette-white);
+}
+
+.time {
+    width: 50px;
+    text-align: center;
+}
