--- a/src/ListenTogether.Pages/Components/Switch.razor
+++ b/src/ListenTogether.Pages/Components/Switch.razor
@@ -1,5 +1,5 @@
 ﻿<div Class="d-flex justify-space-between align-center">
-    <MudInputLabel>@Title</MudInputLabel>
+    <div>@Title</div>
     <MudSwitch Checked="Checked"
                T="bool"
                Color="Color.Primary"
