--- a/src/ListenTogether.Pages/Pages/DiscoverPage.razor
+++ b/src/ListenTogether.Pages/Pages/DiscoverPage.razor
@@ -23,6 +23,11 @@
 </MudTabs>
 
 @code {
+
+    protected override void OnInitialized()
+    {
+        base.OnInitialized();
+    }
     private void GotoSearchPage()
     {
         NavigationManager.NavigateTo("/search");
