--- a/src/ListenTogether.Pages/Pages/PlaylistPage.razor.css
+++ b/src/ListenTogether.Pages/Pages/PlaylistPage.razor.css
@@ -23,11 +23,7 @@
         justify-content: space-between;
     }
 
-    .playlist {
+    .playlist-detail {
         flex-direction: row-reverse;
     }
-
-        .playlist .tool {
-            width: 100px;
-        }
 }
