--- a/src/ListenTogether.Pages/Pages/SearchPage.razor
+++ b/src/ListenTogether.Pages/Pages/SearchPage.razor
@@ -11,7 +11,7 @@
         <div class="histories">
             <div class="suggest-title">
                 搜索历史
-                <MudIconButton Icon="@Icons.Material.Filled.Delete"
+                <MudIconButton Icon="fa-solid fa-trash"
                                Size="Size.Small"
                                Class="ml-2"></MudIconButton>
             </div>
