--- a/src/ListenTogether.Pages/Components/Loading.razor
+++ b/src/ListenTogether.Pages/Components/Loading.razor
@@ -1,8 +1,15 @@
 ﻿<MudOverlay Visible="IsLoading" DarkBackground="true" ZIndex="9999">
-    <MudProgressCircular Color="Color.Primary" Indeterminate="true" />
+    <div class="info d-flex flex-column align-center">
+        <MudProgressCircular Color="Color.Primary" Indeterminate="true" />
+        <div class="message">@Message</div>
+    </div>
+
 </MudOverlay>
 
 @code {
     [Parameter]
     public bool IsLoading { get; set; }
+
+    [Parameter]
+    public string Message { get; set; } = "";
 }
