--- a/src/ListenTogether.Pages/Pages/AutoClosePage.razor
+++ b/src/ListenTogether.Pages/Pages/AutoClosePage.razor
@@ -1,64 +1,66 @@
-﻿@page "/auto-close"
-@inject AutoCloseJob AutoCloseJob
+﻿@inject AutoCloseJob AutoCloseJob
 
-<div class="page">
+@implements IDisposable
+<MudDialog>
+    <DialogContent>
+        <div class="page">
+            <Switch Title="@($"定时关闭 {_remainingTimeString}")"
+                    Checked="@(AutoCloseJob.IsRunning)"
+                    OnChanged="@(SetAutoClose)" />
 
-    <Switch Title="@($"定时关闭 {_remainingTimeString}")"
-            Checked="@(AutoCloseJob.IsRunning)"
-            OnChanged="@(SetAutoClose)" />
+            <div class="mt-4">
+                <div>时间（分钟）</div>
+                <MudRadioGroup Class="mt-2"
+                               SelectedOption="@(_minute)"
+                               SelectedOptionChanged="MinuteChanged"
+                               T="int">
+                    <MudGrid>
+                        <MudItem xs="12" md="2">
+                            <MudRadio Dense="true"
+                                      Option="@(10)">10</MudRadio>
+                        </MudItem>
+                        <MudItem xs="12" md="2">
+                            <MudRadio Dense="true"
+                                      Option="@(20)">20</MudRadio>
+                        </MudItem>
+                        <MudItem xs="12" md="2">
+                            <MudRadio Dense="true"
+                                      Option="@(30)">30</MudRadio>
+                        </MudItem>
+                        <MudItem xs="12" md="2">
+                            <MudRadio Dense="true"
+                                      Option="@(45)">45</MudRadio>
+                        </MudItem>
+                        <MudItem xs="12" md="2">
+                            <MudRadio Dense="true"
+                                      Option="@(60)">60</MudRadio>
+                        </MudItem>
+                        <MudItem xs="12" md="2">
+                            <MudRadio Dense="true"
+                                      Option="@(90)">90</MudRadio>
+                        </MudItem>
+                    </MudGrid>
+                </MudRadioGroup>
 
-
-    <div class="mt-4">
-        <div>时间（分钟）</div>
-        <MudRadioGroup Class="mt-2"
-                       SelectedOption="@(_minute)"
-                       SelectedOptionChanged="MinuteChanged"
-                       T="int">
-            <MudGrid>
-                <MudItem xs="12" md="2">
-                    <MudRadio Dense="true"
-                              Option="@(10)">10</MudRadio>
-                </MudItem>
-                <MudItem xs="12" md="2">
-                    <MudRadio Dense="true"
-                              Option="@(20)">20</MudRadio>
-                </MudItem>
-                <MudItem xs="12" md="2">
-                    <MudRadio Dense="true"
-                              Option="@(30)">30</MudRadio>
-                </MudItem>
-                <MudItem xs="12" md="2">
-                    <MudRadio Dense="true"
-                              Option="@(45)">45</MudRadio>
-                </MudItem>
-                <MudItem xs="12" md="2">
-                    <MudRadio Dense="true"
-                              Option="@(60)">60</MudRadio>
-                </MudItem>
-                <MudItem xs="12" md="2">
-                    <MudRadio Dense="true"
-                              Option="@(90)">90</MudRadio>
-                </MudItem>
-            </MudGrid>
-        </MudRadioGroup>
-
-        <div class="mt-3">自定义</div>
-        <div class="d-flex justify-space-between align-center">
-            <MudTextField T="int" @bind-Value="_customMinute" />
-            <MudButton Variant="Variant.Outlined"
-                       Size="Size.Small"
-                       OnClick="SetCustomMinute"
-                       Disabled="@(_customMinute<=0)"
-                       Immediate="true"
-                       IconColor="Color.Primary">确定</MudButton>
+                <div class="mt-3">自定义</div>
+                <div class="d-flex justify-space-between align-center">
+                    <MudTextField T="int" @bind-Value="_customMinute" />
+                    <MudButton Variant="Variant.Outlined"
+                               Size="Size.Small"
+                               OnClick="SetCustomMinute"
+                               Disabled="@(_customMinute<=0)"
+                               Immediate="true"
+                               IconColor="Color.Primary">确定</MudButton>
+                </div>
+            </div>
         </div>
-    </div>
-</div>
+    </DialogContent>
+</MudDialog>
 
 @code {
     private int _minute;
     private int _customMinute;
-    private string _remainingTimeString;
+    private string _remainingTimeString = "";
     private Timer? _timer;
     protected override async Task OnInitializedAsync()
     {
@@ -112,5 +114,10 @@
     {
         _minute = 0;
         AutoCloseJob.Start(_customMinute);
+    }
+
+    public void Dispose()
+    {
+        _timer?.Dispose();
     }
 }
