--- a/src/ListenTogether.Pages/Pages/AutoClosePage.razor.css
+++ b/src/ListenTogether.Pages/Pages/AutoClosePage.razor.css
@@ -1,9 +1,3 @@
-@media screen and (min-width: 960px) {
-    .page {
-        width: 400px;
-        margin: auto;
-    }
-}
-
-@media screen and (max-width: 960px) {
+.page {
+    margin: 10px 20px 10px 20px;
 }
