--- a/src/ListenTogether.Pages/Pages/MyFavoritePage.razor
+++ b/src/ListenTogether.Pages/Pages/MyFavoritePage.razor
@@ -8,7 +8,7 @@
 @inject ISnackbar Snackbar
 
 <div class="header">
-    <MudInputLabel>我的歌单</MudInputLabel>
+    <div><MudText Typo="Typo.h6">我的歌单</MudText></div>
     <MudButton Variant="Variant.Text"
                Class="ml-5"
                EndIcon="@Icons.Material.Filled.Add"
@@ -33,29 +33,36 @@ else
     }
     else
     {
-        @foreach (var myFavorite in _myFavoriteList)
-        {
-            <div class="d-flex align-center my-favorite mt-4 mb-4" @onclick="@(()=>GotoMyFavoriteDetail(myFavorite.Id))">
-                <div class="flex-grow-0 tool">
-                    <div class="play">
-                        <MudIconButton Icon="@Icons.Material.Filled.PlayCircleOutline"
-                           Size="Size.Medium"
-                           OnClick="@(()=>PlayAllAsync(myFavorite.Id))"></MudIconButton>
+        <MudList Clickable="true">
+            @foreach (var myFavorite in _myFavoriteList)
+            {
+                <MudListItem>
+                    <div class="d-flex align-center my-favorite" @onclick="@(()=>GotoMyFavoriteDetail(myFavorite.Id))">
+                        <div class="flex-grow-0 tool">
+                            <div class="play">
+                                <MudIconButton Icon="@Icons.Material.Filled.PlayCircleOutline"
+                                   Size="Size.Medium"
+                                   OnClick="@(()=>PlayAllAsync(myFavorite.Id))"></MudIconButton>
+                            </div>
+                        </div>
+                        <div class="d-flex align-center flex-grow-1 info">
+                            <MudImage Src="@myFavorite.ImageUrl"
+                          Width="40"
+                          Height="40"
+                          Elevation="5"
+                          Class="rounded-lg mr-3" />
+                            <div>
+                                <div>@myFavorite.Name</div>
+                                <div class="music-count">@myFavorite.MusicCount 首歌</div>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="d-flex align-center flex-grow-1 info">
-                    <MudImage Src="@myFavorite.ImageUrl"
-                  Width="40"
-                  Height="40"
-                  Elevation="5"
-                  Class="rounded-lg mr-3" />
-                    <div>
-                        <div>@myFavorite.Name</div>
-                        <div class="music-count">@myFavorite.MusicCount 首歌</div>
-                    </div>
-                </div>
-            </div>
-        }
+                </MudListItem>
+                <MudHidden Breakpoint="Breakpoint.MdAndUp">
+                    <MudDivider />
+                </MudHidden>
+            }
+        </MudList>
     }
 }
 
@@ -82,7 +89,8 @@ else
 
     private async Task AddMyFavoriteAsync()
     {
-        var dialog = await DialogService.ShowAsync<MyFavoriteAdd>();
+        var options = new DialogOptions { ClassBackground = "dialog-backdrop" };
+        var dialog = await DialogService.ShowAsync<MyFavoriteAdd>("", options);
         var result = await dialog.Result;
 
         if (!result.Canceled)
